Attempted fix for mobile layout issues
During a routine test I observed that on a Pixel 10 the canvas and
layout were overflowing the border of the screen horizontally. I
have attempted to fix this using media queries to restrict the
layout to a single column when orientation is in portrait mode.

--- a/src/styles/common/global.css
+++ b/src/styles/common/global.css
@@ -25,18 +25,35 @@ canvas {
 }
 
 /* Sketch Stuff */
-#sketchSlot {
-  display: grid;
-  grid-template-columns: 1fr minmax(600px, 1fr) 1fr;
-  gap: 10px;
-  width: 100%;
+@media (width > 600px) {
+  #sketchSlot {
+    display: grid;
+    grid-template-columns: 1fr minmax(600px, 1fr) 1fr;
+    gap: 10px;
+    width: 100%;
+  }
+
+
+  #sketchSlot>div {
+    grid-column: 2 / 2;
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
 }
 
-#sketchSlot>div {
-  grid-column: 2 / 2;
-  padding-top: 1em;
-  padding-bottom: 1em;
+@media (orientation: portrait) {
+  #sketchSlot {
+    display: grid;
+    gap: 10px;
+    width: 100%;
+  }
+
+  #sketchSlot>div {
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
 }
+
 
 #sketchSlot>div:first-child {
   border-top-style: solid;
@@ -75,6 +92,10 @@ canvas {
   font-size: 2em;
 }
 
+div #sketch > canvas {
+  margin: auto;
+};
+
 
 #collectionSlot {
   display: grid;
@@ -108,46 +129,13 @@ canvas {
 }
 
 
-
-#collectionThumbs {
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 100px; */
-}
-
-#collectionThumbs>span {}
-
-
 .collectionLinkContainer {
   position: relative;
   display: inline-block;
   margin-left: 5px;
   margin-right: 5px;
-    width: 100px;
+  width: 100px;
   height: 100px;
-}
-
-.collectionLink {
-  /* position: relative; */
-  /* position: absolute;
-  top:0px;
-  left:0px; */
-}
-
-
-.collectionThumbStaticImg {
-  /* position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 0; */
-}
-
-.collectionThumbAnimation {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 1;
-
 }
 
 a:link,
